test/lattests/extensions/objects1/bad/duplicateMethods2.lat
class a {
    void foo() { return; }
    int foo(int x) { return 0; }
}